--- a/.classpath
+++ b/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="lib/log4j-1.2.15.jar"/>
 	<classpathentry kind="lib" path="lib/netty-3.1.4.GA.jar"/>
+	<classpathentry kind="lib" path="/Users/wrench/Eclipse/JTorController/lib/junit-4.7.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
